got swagger working correctly + api generated
