# server/config/swagger/swagger-def.ts
@@ -20,7 +20,185 @@ export default {
 			}
 		}
 	],
-	consumes: ['application/json'],
-	produces: ['application/json'],
-	apis: ['**/*.ts']
+	paths: {
+	  	'/v1/about': {
+			post: {
+				operationId: 'createAbout',
+				summary: 'Create a new AboutModel',
+				tags: ['about'],
+				requestBody: {
+					required: true,
+					content: {
+						'application/json': {
+							schema: {
+								$ref: '#/components/schemas/AboutModel'
+							}
+						}
+					}
+				},
+				responses: {
+					200: {
+						description: 'Created a new AboutModel',
+						content: {
+							'application/json': {
+								schema: {
+									$ref: '#/components/schemas/AboutModel'
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		'/v1/about/latest': {
+			get: {
+				operationId: 'getLatestAbout',
+				summary: 'Gets the latest AboutModel',
+				tags: ['about'],
+				parameters: [
+					{
+						name: 'by',
+						in: 'query',
+						schema: { type: 'string', enum: ['created', 'updated'] },
+						description: 'Latest by either created date or last updated'
+					}
+				],
+				responses: {
+					200: {
+						description: 'Created a new AboutModel',
+						content: {
+							'application/json': {
+								schema: {
+									$ref: '#/components/schemas/AboutModel'
+								}
+							}
+						}
+					}
+				}
+			}
+  		},
+	  	'/v1/about/:id': {
+			get: {
+				summary: 'Gets the AboutModel by id',
+				operationId: 'getAbout',
+				tags: ['about'],
+				parameters: [
+					{
+						name: 'id',
+						in: 'path',
+						required: true,
+						schema: { type: 'string' },
+						description: 'The AboutModel id'
+					}
+				],
+		  		responses: {
+					200: {
+						description: 'Retrieved AboutModel associated with this id',
+						content: {
+							'application/json': {
+								schema: {
+									$ref: '#/components/schemas/AboutModel'
+								}
+							}
+						}
+					}
+		  		}
+			},
+			post: {
+				summary: 'Updates the AboutModel',
+				operationId: 'updateAbout',
+				tags: ['about'],
+		  		parameters: [
+					{
+						name: 'id',
+						in: 'path',
+						required: true,
+						schema: {
+							type: 'string'
+						},
+			  			description: 'The AboutModel id'
+					}
+		  		],
+		  		requestBody: {
+					required: true,
+					content: {
+			  			'application/json': {
+							schema: {
+				  				$ref: '#/components/schemas/AboutModel'
+							}
+			  			}
+					}
+		  		},
+				responses: {
+					200: {
+						description: 'Returns the updated AboutModel',
+						content: {
+							'application/json': {
+								schema: {
+									$ref: '#/components/schemas/AboutModel'
+								}
+							}
+						}
+					}
+				}
+			}
+	  	},
+		'/v1/health-check': {
+			get: {
+				summary: 'Checks the state of the server',
+				operationId: 'checkHealth',
+				tags: ['health-check'],
+				responses: {
+					200: {
+						description: 'Healthy server',
+						content: {
+							'application/json': {
+								schema: {
+									type: 'string'
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	},
+	components: {
+	  	schemas: {
+			AboutModel: {
+		  		type: 'object',
+		  		properties: {
+					bio: {
+			  			type: 'string'
+					},
+					hobbies: {
+			  			type: 'array',
+			  			items: {
+							type: 'string'
+			  			}
+					},
+					favoriteGames: {
+						type: 'array',
+						items: {
+							$ref: '#/components/schemas/FavoriteGameModel'
+			  			}
+					}
+		  		},
+				required: ['bio', 'hobbies', 'favoriteGames']
+			},
+			FavoriteGameModel: {
+		  		type: 'object',
+		  		properties: {
+					category: {
+			  			type: 'string'
+					},
+					game: {
+			  			type: 'string'
+					}
+		  		},
+		  		required: ['category', 'game']
+			}
+	  	}
+	},
+	tags: []
 };
